User preferences for PDF result visual quality
- Add user preferences for PDF result visual quality
- Streamline few variable names
- Streamline documentation conventions in org-mode files '.org'
